test/e2e/chainsaw/04-policy-update.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: policy-update
spec:
  steps:
    - name: create-second-configmap-and-reference
      try:
        - apply:
            resource:
              apiVersion: v1
              kind: ConfigMap
              metadata:
                name: app-config-v2
                namespace: default
              data:
                key2: value2
    - name: update-deployment-to-reference-second-configmap
      try:
        - apply:
            resource:
              apiVersion: apps/v1
              kind: Deployment
              metadata:
                name: app
                namespace: default
              spec:
                replicas: 1
                selector:
                  matchLabels:
                    app: demo
                template:
                  metadata:
                    labels:
                      app: demo
                  spec:
                    containers:
                      - name: app
                        image: nginx:alpine
                        env:
                          - name: CONFIG_VALUE
                            valueFrom:
                              configMapKeyRef:
                                name: app-config
                                key: key
                          - name: CONFIG_VALUE_V2
                            valueFrom:
                              configMapKeyRef:
                                name: app-config-v2
                                key: key2
    - name: assert-new-relationship-created
      try:
        - assert:
            timeout: 90s
            resource:
              apiVersion: knowledge.miloapis.com/v1alpha1
              kind: ResourceRelationship
              metadata:
                namespace: default
              spec:
                relationshipType:
                  name: references-config
                subject:
                  kind: Deployment
                  name: app
                object:
                  kind: ConfigMap
                  name: app-config-v2
